<resources>
    <string name="app_name">Mabbicara App</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Info Aplikasi</string>

    <string name="menu_IndonesiaJepang">Indonesia-Ingrris-Jepang</string>
    <string name="menu_JepangIndonesia">Jepang-Indonesia</string>
    <string name="menu_InggrisJepang">Inggris-Jepang-Indonesia</string>
    <string name="menu_JepangInggris">Jepang-Inggris-Indonesia</string>
    <string name="menu_IndonesiaInggris">Indonesia-Inggris</string>
    <string name="menu_InggrisIndonesia">Inggris-Indonesia</string>
    <string name="menu_Inggris">Aturan Tata Inggris</string>
    <string name="menu_Indonesia">Aturan Tata Bahasa Indonesia</string>
    <string name="menu_Jepang">Aturan Tata Bahasa Jepang</string>
    <string name="menu_Simulasi_Jepang">Simulasi Jepang</string>
    <string name="menu_Simulasi_Inggris">Simulasi Inggris</string>
    <string name="menu_Simulasi_Indo">Simulasi Indo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>